[gd_scene load_steps=2 format=3 uid="uid://been2q7k2hj3i"]

[ext_resource type="Script" path="res://scenes/component/range_component.gd" id="1_bpwio"]

[node name="RangeComponent" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_bpwio")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
